chaneg some word

--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
-        <h1 class="mb-3">Let us solve your critical website <br> development challenges</h1>
-        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nihil enim maxime corporis cumque <br> totam aliquid nam sint inventore optio modi neque laborum officiis necessitatibus</p>
+        <h1 class="mb-3">Let us solve your Car Problem <br> Car Rental</h1>
+        <p class="mb-4">Looking for car with best price in market?</p>
         
         
         <div><a href="contact" class="btn btn-primary">Contact With Us</a></div>
